@@ -1,3 +1,6 @@
+Wed 14 Mar 2018 Aleksey
+	* support --file-list option
+
 Sun 11 Mar 2018 And Sch
 	* librhash: speedup sha3
 
